# WWEB

./: .gitignore  README.adoc  README.md  listener.js  package-lock.json  server.js
demo/src/: CMakeLists.txt  package-lock.json  package.json  package.xml
src/: .gitignore  .nodemonignore  CMakeList.txt  CMakeLists.txt  README.md  bower.json  dev.sh  dummydata.js  package-lock.json  package.json  package.xml  send.js  sensor.js  start.sh  web.js
src/api/controllers/: ConfigurationController.js  ControlController.js  DashboardController.js  LedController.js  LoginController.js  MotorController.js  SonarController.js  StatusController.js  VisualisationController.js
src/api/models/: Sonar.js  User.js
src/api/policies/: Authenticated.js
src/assets/js/layouts/: layout.js
src/assets/js/pages/: configuration.js  control.js  dashboard.js  homepage.js  login.js  sonar.js
src/assets/js/theme/: layout.js
src/assets/styles/: importer.less
src/assets/styles/pages/: control.css  dashboard.css  layout.css  login.css  sonar.css  sonar.less
src/assets/styles/theme/: flat.css
src/config/: bootstrap.js  models.js  policies.js  routes.js  session.js  sockets.js  willyweb.js
src/config/env/: development.js  production.js
src/scripts/: led.js  listento.js  motor.js  package.json  status.js  ultrasonicdata.js
src/tasks/: pipeline.js
src/views/layouts/: layout.ejs  login.ejs
src/views/pages/: configuration.ejs  control.ejs  dashboard.ejs  homepage.ejs  login.ejs  sonar.ejs
